--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         <h2 class="text-center"> &lt; DevOps / Cloud / Designer / Gamer &gt; </h2>
         <br>
         <div class="row text-center" >
-          <div class="col-lg-10 col-lg-offset-1">
-            <h2>          
+          <div class="col-lg-12 col-lg-offset-1">
+            <h3>          
               My name is Abhishek Chowdhary and I'm a Cloud DevOps engineer. I'm from India, living in New Delhi and currently working at Fidelity International Ltd.
               I am having total experience of 3.8 years in IT industry with strong domain and hands-on experienced in Containerisation, CI/CD using Git/Jenkins, confguration management and container orchestration using Kubernetes.
-            </h2>
+            </h3>
           </div>
           <div class="col-lg-12">
             <h2 class="text-center"><strong><u> my skills </u></strong></h2>
@@ -63,7 +63,7 @@
                 <div class="col-lg-3">
                   <p><b>CI/CD tools </b> - Jenkins / Checkmarx / Sonarqube</p>
                 </div>
-                <div class="col-lg-8 ">
+                <div class="col-lg-7 ">
                   <div class="progress">
                    <div class="progress-bar progress-bar-success progress-bar-striped active 1" role="progressbar" >
                     <p> 100% </p>
@@ -73,11 +73,11 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>Configuration management & IaC - Ansible / Terraform / Cloudformation</p>
+                  <p><b>Configuration management & IaC </b>- Ansible / Terraform / Cloudformation</p>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                   <div class="progress">
-                   <div class="progress-bar progress-bar-success progress-bar-striped active 2" role="progressbar" >
+                   <div class="progress-bar progress-bar-success progress-bar-striped active 1" role="progressbar" >
                     <p> 90% </p>
                    </div>
                   </div>
@@ -85,11 +85,11 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>Scripting - Python / Shell</p>
+                  <p><b>Scripting </b>- Python / Shell</p>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                   <div class="progress">
-                   <div class="progress-bar progress-bar-info progress-bar-striped active 3" role="progressbar" >
+                   <div class="progress-bar progress-bar-info progress-bar-striped active 2" role="progressbar" >
                     <p> 80% </p>
                    </div>
                   </div>
@@ -97,11 +97,47 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>Logging/Monitoring - Cloudwatch / ELK</p>
+                  <p><b>Logging/Monitoring </b>- Cloudwatch / ELK</p>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                   <div class="progress">
-                   <div class="progress-bar progress-bar-info progress-bar-striped active 4" role="progressbar" >
+                   <div class="progress-bar progress-bar-info progress-bar-striped active 6" role="progressbar" >
+                    <p> 60% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p><b>Containerization </b>- Docker / Kubernetes / ECS / EKS</p>
+                </div>
+                <div class="col-lg-7">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-warning progress-bar-striped active 4" role="progressbar"  >
+                    <p> 70% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p><b>Cloud </b>- AWS / Azure</p>
+                </div>
+                <div class="col-lg-7">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-warning progress-bar-striped active 4" role="progressbar" >
+                    <p> 70% </p>
+                   </div>
+                  </div>
+                </div>
+                <div class="clearfix"> </div>
+
+                <div class="col-lg-3">
+                  <p><b>Operating System </b>- Linux / Ubuntu / Redhat</p>
+                </div>
+                <div class="col-lg-7">
+                  <div class="progress">
+                   <div class="progress-bar progress-bar-danger progress-bar-striped active 5" role="progressbar" >
                     <p> 80% </p>
                    </div>
                   </div>
@@ -109,48 +145,12 @@
                 <div class="clearfix"> </div>
 
                 <div class="col-lg-3">
-                  <p>Containerisation - Docker / Kubernetes / ECS / EKS</p>
+                  <p><b>VCS and artifactory </b>- Gitlab / Bitbucket / Nexus</p>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                   <div class="progress">
-                   <div class="progress-bar progress-bar-warning progress-bar-striped active 5" role="progressbar"  >
-                    <p> 70% </p>
-                   </div>
-                  </div>
-                </div>
-                <div class="clearfix"> </div>
-
-                <div class="col-lg-3">
-                  <p>Cloud - AWS / Azure</p>
-                </div>
-                <div class="col-lg-8">
-                  <div class="progress">
-                   <div class="progress-bar progress-bar-warning progress-bar-striped active 6" role="progressbar" >
-                    <p> 70% </p>
-                   </div>
-                  </div>
-                </div>
-                <div class="clearfix"> </div>
-
-                <div class="col-lg-3">
-                  <p>Operating System - Linux / Ubuntu / Redhat</p>
-                </div>
-                <div class="col-lg-8">
-                  <div class="progress">
-                   <div class="progress-bar progress-bar-danger progress-bar-striped active 7" role="progressbar" >
-                    <p> 50% </p>
-                   </div>
-                  </div>
-                </div>
-                <div class="clearfix"> </div>
-
-                <div class="col-lg-3">
-                  <p>VCS and artifactory - Gitlab / Bitbucket / Nexus</p>
-                </div>
-                <div class="col-lg-8">
-                  <div class="progress">
-                   <div class="progress-bar progress-bar-danger progress-bar-striped active 8" role="progressbar" >
-                    <p> 50% </p>
+                   <div class="progress-bar progress-bar-danger progress-bar-striped active 1" role="progressbar" >
+                    <p> 100% </p>
                    </div>
                   </div>
                 </div>
